--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jquery.sampling",
-    "version": "1.0.0",
+    "version": "1.0.0-alpha.2",
     "title": "jQuery.sampling()",
     "author": {
         "name": "Salvador de la Puente González",
